# OmnigenceAI

./: .gitignore  package-lock.json  package.json
backend/: README.md  implementation_plan.md  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/Dashboard/: LeftSideBar.tsx
frontend/src/components/FileUploader/: FileUploader.tsx  index.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: index.ts
frontend/src/utils/: apiConfig.ts  systemService.ts  uploadService.ts
测试的票据/: 副本保利高（齿轮）3-3.xls  副本报价单（精丰）10-30.xlsx  副本罗丰对账单保利文2025年3月份(2).xlsx
